# falkordb-bin-py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-platform-wheels.yml
falkordb_bin/: __init__.py
scripts/: build_redis.sh  download_falkordb.sh  repair_linux_wheel.sh
